# legroom-ai.github.io

./: .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .release-please-config.json  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  NOTICE  README.md  RUST_DEV.md  SECURITY.md  TESTING-copilot-subscription.md  codecov.yml  docker-bake.hcl  docker-compose.yml  index.html  llms.txt  mkdocs.yml  pyproject.toml  release-notes.md  server.json  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.memory.yml  post-create.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
ARCHITECTURE/: index.html
CCA/: app.js  index.html  styles.css
LATENCY_BENCHMARKS/: index.html
LIMITATIONS/: index.html
REALIGNMENT/: 00-overview.md  01-bug-list.md  02-architecture.md  03-phase-A-lockdown.md  04-phase-B-live-zone.md  05-phase-C-rust-proxy.md  06-phase-D-bedrock-vertex.md  07-phase-E-cache-stabilization.md  08-phase-F-auth-mode.md  09-phase-G-rtk-observability.md  10-phase-H-python-retirement.md  11-phase-I-test-infra.md  12-decisions-needed.md  INDEX.md
agno/: index.html
api/: index.html
benchmarks/: __init__.py  adversarial_ccr_tests.py  agent_cost_benchmark.py  bench_latency.py  bench_relevance.py  bench_transforms.py  cache_bust_trace_report.py  cache_validation_bundle.py  ccr_regression_benchmark.py  claude_session_branch_compare.py  claude_session_mode_benchmark.py  comprehensive_eval.py  compression_benchmark.py  conftest.py  dynamic_detector_benchmark.py  headroom_adversarial_benchmark.py  i18n_compression_eval.py  index.html  legroom_worst_case_benchmark.py  prefix_cache_benchmark.py  proxy_mode_benchmark.py  real_world_agent_benchmark.py  rtk_loop_learn_eval.py  run_benchmarks.py  text_crusher_quality_eval.py
ccr/: index.html
cli/: index.html
compression/: index.html
configuration/: index.html
crates/headroom-parity/: Cargo.toml
crates/headroom-parity/src/: lib.rs
docker/: docker-compose.native.yml
docker-install/: index.html
docs/: claude-code-bedrock-legroom.md  observability.md  package-lock.json  package.json  platform-feature-matrix.json  rtk-architecture.md
e2e/: __init__.py  docker-native-install.sh
errors/: index.html
examples/: 07-context-compression.ipynb  README.md  context_compression_demo.py  strands_bedrock_demo.py  strands_bundle_demo.py  strands_mcp_dispatch_test.py  strands_via_proxy_demo.py  tabular_compression_demo.py  test_ccr.py
filesystem-contract/: index.html
getting-started/: index.html
plugins/headroom-oauth2/: README.md  SPEC.md  pyproject.toml
(+1588 files in other folders)
