[package]
name = "legroom-parity"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust-vs-Python parity harness for the Legroom port."

[lib]
path = "src/lib.rs"

[[bin]]
name = "parity-run"
path = "src/bin/parity_run.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
legroom-core = { path = "../legroom-core" }
# NOTE: Phase 0 does not invoke Python from Rust. Phase 1 adds `pyo3` with
# `auto-initialize` here so comparators can call into the installed
# `legroom` package directly.
